file(GLOB testFiles "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
enable_testing()
foreach(testFile IN LISTS testFiles)
    get_filename_component(testFileName ${testFile} NAME_WE)
    add_executable(${testFileName} ${testFile})
    target_link_libraries(${testFileName} Thread pthread)    
    add_test(NAME ${testFileName} COMMAND ${testFileName})
endforeach()